GNOME Bugzilla – Bug 676344
tests, xvimagesink: some minor fixes
Last modified: 2012-05-19 10:23:51 UTC
Created attachment 214415 [details] [review] fix in sample pipeline some trivial fixes to plugins-base..
Created attachment 214416 [details] [review] remove dead code
Thanks, pushed: commit 1805273cc588d06da495df0dcd7e81bd32e87ab9 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Tue May 15 16:09:05 2012 +0300 xvimagesink: remove unused assignment https://bugzilla.gnome.org/show_bug.cgi?id=676344 commit d172962082fbe9d4dcf3012ac093871c28bc91d8 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Wed May 16 12:25:09 2012 +0300 tests/icles: fix type of format field in 0.11 video caps https://bugzilla.gnome.org/show_bug.cgi?id=676344