xvimagesink: remove unused assignment

https://bugzilla.gnome.org/show_bug.cgi?id=676344